wrapper/c/include/EliteC/Dashboard/elite_dashboard_c.h

typedef struct elite_dashboard_handle_t elite_dashboard_handle_t;
ELITE_C_EXPORT elite_c_status_t elite_dashboard_create(elite_dashboard_handle_t** out_handle);
ELITE_C_EXPORT void elite_dashboard_destroy(elite_dashboard_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_connect(elite_dashboard_handle_t* handle, const char* ip, int32_t port,
                                                        int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_disconnect(elite_dashboard_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_echo(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_power_on(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_power_off(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_brake_release(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_close_safety_dialog(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_unlock_protective_stop(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_safety_system_restart(elite_dashboard_handle_t* handle, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_log(elite_dashboard_handle_t* handle, const char* message, int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_popup(elite_dashboard_handle_t* handle, const char* arg, const char* message,
                                                      int32_t* out_success);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_quit(elite_dashboard_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_reboot(elite_dashboard_handle_t* handle);
ELITE_C_EXPORT elite_c_status_t elite_dashboard_shutdown(elite_dashboard_handle_t* handle);